--- a/wei/app/src/main/res/layout/action_bar.xml
+++ b/wei/app/src/main/res/layout/action_bar.xml
@@ -2,14 +2,22 @@
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="50dp">
+    android:layout_height="match_parent">
+
+    <RelativeLayout
+        android:id="@+id/action_bar_relativeLayout"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/fifty">
+
     <TextView
         android:id="@+id/leftTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="16dp"
+        android:layout_marginLeft="@dimen/twelve"
+        android:padding="@dimen/six"
         android:layout_alignParentLeft="true"
         android:layout_centerInParent="true"
+        android:textColor="@color/white"
         android:gravity="center"
         />
 
@@ -19,6 +27,7 @@
         android:layout_height="wrap_content"
         android:padding="16dp"
         android:layout_centerInParent="true"
+        android:textColor="@color/white"
         android:gravity="center"
         />
 
@@ -27,8 +36,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:layout_marginRight="6dp"
+        android:layout_marginRight="@dimen/three"
+        android:padding="@dimen/six"
         android:layout_toLeftOf="@+id/rightTextView"
+        android:textColor="@color/white"
         android:gravity="center"
         />
 
@@ -36,10 +47,13 @@
         android:id="@+id/rightTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginRight="16dp"
+        android:layout_marginRight="@dimen/twelve"
+        android:padding="@dimen/six"
         android:layout_alignParentRight="true"
         android:layout_centerInParent="true"
+        android:textColor="@color/white"
         android:gravity="center"
         />
+    </RelativeLayout>
 
 </RelativeLayout>
