--- a/wei/app/src/main/res/layout/activity_login_layout.xml
+++ b/wei/app/src/main/res/layout/activity_login_layout.xml
@@ -1,8 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent" android:layout_height="match_parent">
 
+    <ListView
+        android:id="@+id/actionBarListView"
+        android:layout_width="150dp"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        android:layout_alignParentRight="true"/>
 
-</LinearLayout>
+</RelativeLayout>
