--- a/wei/app/src/main/res/values/colors.xml
+++ b/wei/app/src/main/res/values/colors.xml
@@ -4,6 +4,7 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
 
+    <color name="white">#ffffffff</color>
     <color name="red">#B00000</color>
     <color name="yellow">#FFFF00</color>
     <color name="bule">#0080FF</color>
