--- a/wei/app/src/main/res/layout/activity_login_layout.xml
+++ b/wei/app/src/main/res/layout/activity_login_layout.xml
@@ -1,15 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent" android:layout_height="match_parent">
-
-    <ListView
-        android:id="@+id/actionBarListView"
-        android:layout_width="150dp"
-        android:layout_height="wrap_content"
-        android:visibility="gone"
-        android:layout_alignParentRight="true"/>
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content">
 
 
+    <test.MyView
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
+        android:background="#0000ff">
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="#ff0000">
+        </View>
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="#00ff00"></View>
+    </test.MyView>
 </RelativeLayout>
