--- a/wei/app/src/main/res/layout/activity_light_layout.xml
+++ b/wei/app/src/main/res/layout/activity_light_layout.xml
@@ -34,6 +34,8 @@
         android:id="@+id/listView"
         android:layout_width="match_parent"
         android:layout_below="@+id/button"
+        app:ptrHeaderBackground="@color/bule"
+        app:ptrDrawableTop="@drawable/anim"
         android:layout_height="match_parent"/>
 
 </RelativeLayout>
