--- a/wei/app/src/main/res/layout/activity_light_layout.xml
+++ b/wei/app/src/main/res/layout/activity_light_layout.xml
@@ -38,4 +38,10 @@
         app:ptrDrawableTop="@drawable/anim"
         android:layout_height="match_parent"/>
 
+    <ImageView
+        android:id="@+id/mImageView"
+        android:layout_centerInParent="true"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
 </RelativeLayout>
