--- a/wei/app/src/main/res/values/dimens.xml
+++ b/wei/app/src/main/res/values/dimens.xml
@@ -13,7 +13,8 @@
     <dimen name="thirty">30dp</dimen>
     <dimen name="forty">40dp</dimen>
     <dimen name="fifty">50dp</dimen>
-    <dimen name="sixfty">60dp</dimen>
+    <dimen name="sixty">60dp</dimen>eighty
+    <dimen name="eighty">80dp</dimen>
     <dimen name="one_hundred_and_fifty">150dp</dimen>
     <dimen name="two">200dp</dimen>
     <dimen name="twoTwo">220dp</dimen>
