--- a/wei/app/src/main/res/values/styles.xml
+++ b/wei/app/src/main/res/values/styles.xml
@@ -32,12 +32,13 @@
     <style name="windowListActivity" parent="android:style/Theme.Dialog">
         <item name="android:windowBackground"> @color/white</item>
     </style>
-    <!-- -->
+    <!-- 主Fragment按钮 -->
     <style name="mainFragmentRadioButton" >
         <item name="android:layout_weight">1</item>
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:gravity">center</item>
+        <item name="android:padding">@dimen/nine</item>
     </style>
 
     <!-- -->
