--- a/wei/app/src/main/res/layout/activity_userinfo_layout.xml
+++ b/wei/app/src/main/res/layout/activity_userinfo_layout.xml
@@ -23,7 +23,8 @@
     <com.example.base.widget.RefreshableView
         android:id="@+id/refreshable_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        >
 
         <!--<ListView-->
             <!--android:id="@+id/list_view"-->
@@ -32,7 +33,8 @@
         <!--</ListView>-->
         <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+            >
 
         <LinearLayout
         android:layout_width="match_parent"
@@ -84,6 +86,66 @@
         android:layout_gravity="center"
         android:text="@string/action_quit" />
         </LinearLayout>
+            <LinearLayout
+                style="@style/view"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/forty">
+                <Button
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/forty"
+                    android:layout_gravity="center"
+                    android:text="@string/action_quit" />
+            </LinearLayout>
+            <LinearLayout
+                style="@style/view"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/forty">
+                <Button
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/forty"
+                    android:layout_gravity="center"
+                    android:text="@string/action_quit" />
+            </LinearLayout>
+            <LinearLayout
+                style="@style/view"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/forty">
+                <Button
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/forty"
+                    android:layout_gravity="center"
+                    android:text="@string/action_quit" />
+            </LinearLayout>
+            <LinearLayout
+                style="@style/view"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/forty">
+                <Button
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/forty"
+                    android:layout_gravity="center"
+                    android:text="@string/action_quit" />
+            </LinearLayout>
+            <LinearLayout
+                style="@style/view"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/forty">
+                <Button
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/forty"
+                    android:layout_gravity="center"
+                    android:text="@string/action_quit" />
+            </LinearLayout>
+            <LinearLayout
+                style="@style/view"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/forty">
+                <Button
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/forty"
+                    android:layout_gravity="center"
+                    android:text="@string/action_quit" />
+            </LinearLayout>
         </LinearLayout>
         </ScrollView>
     </com.example.base.widget.RefreshableView>
