--- a/wei/app/src/main/res/layout/widget_pull_to_refresh_layout.xml
+++ b/wei/app/src/main/res/layout/widget_pull_to_refresh_layout.xml
@@ -1,8 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/pull_to_refresh_head"
     android:layout_width="match_parent"
-    android:layout_height="60dip" >
+    android:layout_height="60dip"
+    >
+
 
     <LinearLayout
         android:layout_width="200dip"
@@ -20,7 +23,16 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
+                android:src="@drawable/indicator_arrow"
                 />
+
+            <com.example.base.widget.PowerImageView
+                android:id="@+id/gitBackgroup"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:background="@drawable/git_backgroup"
+                android:visibility="gone"/>
+
             <ProgressBar
                 android:id="@+id/progress_bar"
                 android:layout_width="30dip"
@@ -42,7 +54,7 @@
                 android:layout_height="0dip"
                 android:layout_weight="1"
                 android:gravity="center_horizontal|bottom"
-                />
+                android:text="@string/pull_to_refresh" />
 
             <TextView
                 android:id="@+id/updated_at"
@@ -50,7 +62,7 @@
                 android:layout_height="0dip"
                 android:layout_weight="1"
                 android:gravity="center_horizontal|top"
-                />
+                android:text="@string/updated_at" />
         </LinearLayout>
     </LinearLayout>
 </RelativeLayout>
